force-app/main/default/objects/History_Tracker__c/History_Tracker__c.object-meta.xml
<CustomObject>
    <label>History Tracker</label>
    <nameField>
        <displayFormat>HT-{0000}</displayFormat>
        <label>History Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>