force-app/main/default/objects/History_Tracker__c/fields/Content_Version__c.field-meta.xml
<CustomField>
    <fullName>Content_Version__c</fullName>
    <label>Content_Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>