force-app/main/default/objects/History_Tracker__c/fields/Document_Generate_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Document_Generate_Date_Time__c</fullName>
    <label>Document Generate Date &amp; Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>