force-app/main/default/objects/History_Tracker__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>History Trackers</relationshipLabel>
    <relationshipName>History_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>