force-app/main/default/objects/History_Tracker__c/fields/History_Tracker_Id__c.field-meta.xml
<CustomField>
    <fullName>History_Tracker_Id__c</fullName>
    <label>History_Tracker_Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>