force-app/main/default/objects/History_Tracker__c/fields/Object_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Record_Id__c</fullName>
    <label>Object_Record_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>