force-app/main/default/objects/History_Tracker__c/fields/Object_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Object_Record_Ids__c</fullName>
    <label>Object Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>