force-app/main/default/objects/History_Tracker__c/fields/Object_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Record_Name__c</fullName>
    <label>Object Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>