force-app/main/default/objects/History_Tracker__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>