force-app/main/default/objects/History_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Object_Record_Id__c</columns>
    <columns>Document_Template__c</columns>
    <columns>Step__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>